--- a/index.html
+++ b/index.html
@@ -7,19 +7,39 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Document</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-</head>
-<div class="container">
-    <header id="heading">
-        <h1></h1>
-    </header>
 
-</div>
+</head>
 
 <body>
+    <div class="container">
+        <header id="heading">
+            <div id="buttons"></div>
+        </header>
+        <div class="row">
+            <div class="col">
+                <div id="gifs" class="card-columns">
+                </div>
+            </div>
+            <div class="col">
+                <label for="basic-url">Add food</label>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" id="input">
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-secondary" type="button" id="add">Add</button>
+                    </div>
+                </div>
+            </div>
 
+        </div>
+
+    </div>
 </body>
 <script type="text/javascript" src="assets/javascript/app.js"> </script>
 
