--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="col">
-                <label for="basic-url">Add food</label>
+                <!-- <label for="basic-url">GET YOUR FAVOURITE BOBA GIFS</label> -->
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" id="input">
                     <div class="input-group-append">
